--- a/deploy.yml
+++ b/deploy.yml
@@ -2,6 +2,8 @@
 - name: "Apache installation using docker"
   hosts: prod
   become: true
+  vars_files:
+    - files/secrets/credentials.yml
   tasks:
     - name: "html file generation"
       template:
